2010-03-17  Paul C. Mantz <pcmantz@zmanda.com>
	* server-src/amreport.pl: added new command line options
	* server-src/amdump.sh: updated usage of amreport
	* installchecks/amreport.pl: installchecks
	* man/xml-source/amreport.8.xml: usage doc update
	* NEWS: added info about rewrite

2010-03-17 Dan Locks <dwlocks@zmanda.com>
	*  configure.in: update to rc08.  NOTEST

2010-03-17  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report/human.pm: fixed premature disk truncation in
         dump summary

2010-03-16 Dan Locks <dwlocks@zmanda.com>
	*  configure.in: update to rc08.  NOTEST

2010-03-16  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Tests.swg: add a simple threaded function
	* perl/Makefile.am: and invoke it from 'make check'

2010-03-16  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amcryptsimple.8.xml: Fix formatting

2010-03-16  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/ampgsql.8.xml: Fix formatting.

2010-03-16  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/debug.c: Set open_time in debug_setup_1.

2010-03-15  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amsamba.8.xml: document include/exclude expressions

2010-03-15  Dustin J. Mitchell <dustin@zmanda.com>
	* UPGRADING: add note about accidentally linking new versions against old

2010-03-15  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Util.pod: added POD for slurp and burp

2010-03-15  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amreport.pl: add tests for exit status for planner
	  failure

2010-03-15  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: remove input_errors, as that's now the
	  caller's responsibility
	* installcheck/Amanda_Taper_Scribe.pl: corresponding changes
	* server-src/taper.pl: handle input errors directly

2010-03-15  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/tape-aix.c device-src/tape-ops.h device-src/tape-posix.c